# Book-Review-FastAPI-Web-App

./: .env  .gitignore  README.md  compose.yml  dump.rdb  pyproject.toml  runworker.sh
alembic/: env.py
alembic/versions/: 2086ccd30b53_reviews_table_is_create_and_linked_with_.py  371baf940eb1_create_users_table_with_userrole_enum.py  3ee656b08a9b_related_book_with_users.py  41af09a4efe2_tags_and_book_tag_table_is_create_and_.py  543cb1eeaa5b_add_default_for_created_at_and_updated_.py  a3e14099aa1e_remove_default_value_of_role_of_user.py  ab207774670e_email_column_at_user_table_is_made_.py  b18b6aee0968_book_created_and_updated_column_.py  b4408b79bedb_add_default_for_created_at_and_updated_.py  b7a748efa74a_change_book_id_to_bid.py  d5f4661d39b8_change_in_role_of_usermodel.py
app/: main.py
app/auth/: dependencies.py  models.py  routes.py  schemas.py  service.py
app/books/: dependencies.py  models.py  routes.py  schemas.py  service.py
app/core/: config.py  logger.py  middleware.py  security.py  utils.py
app/db/: redis.py  session.py
app/reviews/: dependencies.py  models.py  routes.py  schemas.py  service.py
app/shared/: exception_handlers.py  utils.py
app/tags/: dependencies.py  models.py  routes.py  schemas.py  services.py
app/templates/: password_reset_success.html  verify_email.html
logs/: app.log.2025-10-31  app.log.2025-11-01  app.log.2025-11-03  app.log.2025-11-05  app.log.2025-11-07  app.log.2025-11-08  app.log.2025-11-12  app.log.2025-11-13  app.log.2025-11-14
src/: main.py
src/db/: redis.py  (+1 more)
tests/: conftest.py  example.md  test_auth.py
(+39 files in other folders)
